--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Sam Marshall",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.1.21",
+    "babel-loader": "^6.1.0",
     "electron-prebuilt": "^0.35.0",
     "webpack": "^1.12.6"
   },
   "dependencies": {
+    "jsnox": "^2.1.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2"
   }
