--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
   },
   "dependencies": {
     "express": "^4.13.3",
+    "history": "^1.13.1",
     "immutable": "^3.7.5",
     "jsnox": "^2.1.1",
     "ramda": "^0.18.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
+    "redux-simple-router": "0.0.10",
     "redux-thunk": "^1.0.0",
     "socket.io": "^1.3.7"
   }
