--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "babel-core": "^6.1.21",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
+    "css-loader": "^0.23.0",
     "electron-prebuilt": "^0.35.0",
+    "node-sass": "^3.4.2",
     "redux-devtools": "^2.1.5",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.6"
   },
   "dependencies": {
